...
          icon: const Icon(Icons.arrow_back),
          onPressed: () {
            context.pop();
          },
          tooltip: 'Back to Select Event',
        ),
        title: const Text('My Events'),
        actions: const [SettingsMenu()],
      ),
      body: _buildBody(),
      floatingActionButton: Semantics(
        identifier: 'manage_events_add_button',
        child: FloatingActionButton(
          key: const ValueKey('manage_events_add_button'),
          onPressed: () async {
            await context.push(Routes.manageEvent);
            _loadEvents();
          },
...
